Fix bug 331854, extension prefpanes disappeared. r+sr=mento